# gripper

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  flake.nix  meson.build
nix/: default.nix  overlays.nix
src/: capture.c  capture.h  compositors.c  compositors.h  grim.c  grim.h  hyprland.c  hyprland.h  main.c  memplus.h  meson.build  prog.c  prog.h  sway.c  sway.h  utils.c  utils.h
src/utils/: arena.c  arena.h  utils.c  utils.h
